--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,63 +1,13 @@
-# Python-related
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# Virtual environment
-venv/
-ENV/
-env/
-
-# Flask-related
-instance/
-.webassets-cache
-
-# IDEs and editors
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS-related
-.DS_Store
-Thumbs.db
-
-# Vercel-related
 .vercel
-.now
-
-# Logs
 *.log
+*.pyc
+__pycache__
 
-# Environment variables
-.env
-.env.local
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# pyenv
-.python-version
-
-# Miscellaneous
-*.bak
-*.tmp
-*.temp
+# Environments 
+.env 
+.venv 
+env/ 
+venv/ 
+ENV/ 
+env.bak/ 
+venv.bak/ 
